# evolora

./: .agents.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  PLAN.md  PROGRESS.md  README.md  WORK_LOG.md  pyproject.toml  requirements.txt
.beads/: .gitignore  issues.jsonl
.codex/: LEARNINGS.md
config/: ecology.yaml
docs/: SITREP.md  architecture.md  docx_inserts.md  ecology_overview.md  regex_generalization.md  regex_task_family.md  running.md  transfer_evaluation.md
scripts/: analyze_ecology_run.py  analyze_submasks.py  benchmark_suite.py  bootstrap_ecology.py  build_holdout_paper_qwen3.py  colony_infer.py  compare_runs.py  derive_masks.py  diagnose_model_capabilities.py  eval_gemma.py  eval_gemma_long.py  eval_regex_generalization.py  evaluate_holdout.py  evaluate_submasks.py  evaluate_transfer.py  evoscope.py  evoscope_anim.py  export_run_adapters.py  generate_grid_datasets.py  generate_regex_generalization_datasets.py  generate_regex_grid_datasets.py  generate_regex_sft_data.py  infer_saved_adapter.py  llm_live.py  merge_audit.py  modal_grid_broadmix_evo_vs_sft.py  modal_grid_multiobjective_smoke.py  modal_sanity.py  paper_pack.py  run_calibration.py  run_calibration_then_resume.sh  run_evolution.py  run_grid_multiobjective_evo_vs_sft.sh  run_ood_suite.py  run_paper_ecology_suite.sh  run_regex_evo_vs_sft.sh  run_regex_generalization_evo_vs_sft.sh  run_sft.py  visualize_grid.py
tests/: conftest.py  test_analyzer_assim_extra.py  test_analyzer_assimilation.py  test_analyzer_colonies.py  test_analyzer_lp.py  test_analyzer_plots_extra.py  test_analyzer_teams.py  test_assimilation.py  test_assimilation_bootstrap.py  test_assimilation_energy.py  test_assimilation_power.py  test_auto_batch.py  test_auto_nudge.py  test_benchmark_harness.py  test_budgeting.py  test_c2c.py  test_checkpoint_io.py  test_ci_utils.py  test_co_routing_probe.py  test_colony_adaptation.py  test_colony_bandwidth.py  test_colony_defaults.py  test_colony_infer.py  test_colony_inference.py  test_comms.py  test_components.py  test_config_defaults.py  test_config_fallback_loader.py  test_config_knobs.py  test_config_loader.py  test_config_loader_fallback_minimal.py  test_curriculum.py  test_ecology_loop.py  test_economics_minting.py  test_energy_economy.py  test_energy_guard_bandit.py  test_energy_topup_already.py  test_energy_tuning.py  test_environment_controller.py  test_evaluate_holdout_routing.py  (+80 more)
(+106 files in other folders)
